[package]
name = "osmium-engine"
version = "0.0.1-alpha.0"
edition = "2021"
license = "Apache-2.0"
description = "A TUI library for advanced uis"
repository = "https://github.com/osui-rs/engine"
homepage = "https://osui.netlify.app"
documentation = "https://osui.netlify.app/docs/"

[features]
default = ["state"]
state = []

[lib]
name = "osmium_engine"
path = "src/lib.rs"

[[bin]]
name = "osmium_engine"
path = "src/main.rs"

[dependencies]
crossterm = "0.28.1"